--- a/example-1/style.css
+++ b/example-1/style.css
@@ -14,8 +14,42 @@ body{
 }
 
 /* menu base styles */
+nav{
+    background: #333;
+}
+nav ul{
+    list-style-type: none;
+    padding: 0;
+}
+
+
+nav a{
+    text-decoration: none;
+    text-align: center;
+    color: #fff;
+    display: block;
+    padding: 10px;
+}
+
+nav a:hover{
+    background-color: #555;
+}
 
 
 
 
 /* flex styles */
+
+@media screen and (min-width: 760px) {
+    nav ul{
+        display: flex;
+        justify-content: flex-end;
+    }
+    nav li{
+        flex: 1 1 0;
+    }
+    nav{
+        display: flex;
+        justify-content: space-between;
+    }
+}
