--- a/example-2/style.css
+++ b/example-2/style.css
@@ -37,6 +37,26 @@ nav a:hover{
 }
 
 /* social menu base styles */
+a.tw{
+  background: url(img/tw.png) no-repeat center;
+  background-size: 80%;
+}
+a.fb{
+  background: url(img/fb.png) no-repeat center;
+  background-size: 80%;
+}
+.social a{
+  text-indent: -10000px;
+}
+
+.social{
+  max-width: 80px;
+  margin: 0 auto;
+}
+
+nav ul.social{
+  flex: 1 1 0;
+}
 
 /* flex styles */
 
@@ -49,6 +69,10 @@ nav ul{
 nav li{
   flex: 1 1 0;
 }
-    
+
+nav{
+  display: flex;
+  justify-content: space-between;
+}
 } /* end media 768 */
 
