--- a/example-3/style.css
+++ b/example-3/style.css
@@ -18,6 +18,7 @@ body{
 
 nav{
   background: #333;
+  justify-content: space-between;
 }
 
 nav ul{
@@ -60,11 +61,32 @@ a.fb{
   margin: 0 auto; /* do at end */
 }
 
+
+ul.social{
+  margin: 0;
+}
+
+
 /* grid vs flex base styles */
 
-
-
+#blocks{
+  margin: 20px;
+}
 /* flex styles */
+
+article{
+  background-color: #fff;
+  margin-bottom: 20px;
+  padding: 10px;
+  box-sizing: border-box;
+
+}
+
+article h2{
+  text-align: center;
+  font-size: 20px;
+  margin: 10 0;
+}
 
 nav ul.social li{
   flex: 1 1 0;
@@ -93,6 +115,22 @@ nav{
 ul.social{
   margin: 0;
 }
-    
+
+#blocks{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+article{
+  flex: 0 1 32%;
+  transition: flex-basis 0.2s linear;
+}
+
+article.stack{
+  flex: 0 1 100%;
+}
+
+
 } /* end media 768 */
 
